# label-309-gateway

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  gateway.example.toml
.cargo/: audit.toml
ans104/: Cargo.toml  README.md
ans104/examples/: sign_to_json.rs  sign_tx_v2_to_json.rs
ans104/src/: base64url.rs  bundle.rs  data_item.rs  deep_hash.rs  error.rs  lib.rs  sig_type.rs  signer.rs  tags.rs  tx_v2.rs  verify.rs
ans104/tests/: cross_check.rs  integration.rs  streaming.rs  vectors.rs
ans104/tests/fixtures/: arbundles-reference.json
ans104/tests/vectors/: README.md  anchor_only.json  data_0.json  data_1.json  data_100000.json  data_511.json  data_512.json  deep-hash-kats.json  empty_tags.json  minimal_gateway_tags.json  neither.json  tag_bytes_4096_boundary.json  tag_bytes_4097_reject.json  target_and_anchor.json  target_only.json  test-jwk.json  unicode_tags.json
ans104/tools/: cross-verify.mjs  generate-vectors.mjs  live-post.mjs  package.json  verify-tx-v2.mjs
cardano-poe-tx/: Cargo.toml  README.md
cardano-poe-tx/src/: build.rs  fee.rs  lib.rs  metadata.rs  selection.rs  types.rs
cardano-poe-tx/tests/: canonical.rs  carriage.rs  corpus.rs  fee_fixpoint_regression.rs  parity_report.rs
cardano-poe-tx/tests/fixtures/: README.md
cardano-poe-tx/tests/fixtures/corpus/: README.md  generate.py
cardano-poe-tx/tests/fixtures/corpus/inputs/: change_below_min_ada_add_input.json  change_below_min_ada_fold.json  competing_a.json  competing_b.json  exact_fit.json  insufficient.json  multi_input.json  size_1.json  size_1024.json  size_127.json  size_128.json  size_129.json  size_14000.json  size_4096.json  size_63.json  size_64.json  size_65.json  ttl_and_valid_from.json  ttl_set.json
cardano-poe-tx/tests/fixtures/corpus/rust-out/: .gitignore
cardano-poe-tx/tests/fixtures/oracle/: README.md  parity-report.json
cardano-poe-tx/tools/oracle/: .gitignore  README.md  generate-oracle.mjs  package-lock.json  package.json
conformance/: Cargo.toml  README.md
conformance/src/: lib.rs  receiver.rs
conformance/tests/: control_conformance.rs  published_cli.rs  published_clients.rs  published_ts_sdk.rs  sse_resume.rs  storage_conformance.rs  webhook_conformance.rs
conformance/tools/: package.json  sdk-ts-flows.mjs
deploy/: README.md  docker-compose.yml
docs/: building-a-service.md  operators.md
gateway/: Cargo.toml  README.md
gateway-core/: Cargo.toml  README.md  sqlx.toml
gateway-core/migrations/: 0001_baseline_schema.sql
gateway-core/src/: error.rs  http.rs  lib.rs
gateway-core/src/api/: docs.rs  ids.rs  mod.rs  problem.rs  sse.rs  state.rs  wire.rs
gateway-core/src/api/assets/: openapi.json  scalar-standalone.js
gateway-core/src/api/control/: audit.rs  credential.rs  guard.rs  keys.rs  ledger_adjust.rs  mod.rs  principal.rs  queries.rs  routes.rs  state.rs
gateway-core/src/api/control/assets/: openapi-control.json
gateway-core/src/api/middleware/: auth.rs  idempotency.rs  mod.rs  rate_limit.rs  scope.rs
gateway-core/src/api/routes/: account.rs  guard.rs  meta.rs  mod.rs  publish.rs  quote.rs  records.rs  sessions.rs  uploads.rs  webhooks.rs
gateway-core/src/chain/: attempt.rs  confirm.rs  egress.rs  gateway.rs  mod.rs  params.rs  records.rs  recover.rs  scan.rs  submit.rs
gateway-core/src/events/: mod.rs
gateway-core/src/ledger/: account.rs  journal.rs  mod.rs  quote.rs
gateway-core/src/maintenance/: mod.rs  partitions.rs
gateway-core/src/pricing/: cooldown.rs  fx_refresh.rs  margin_override.rs  mod.rs  oracle.rs  pg_pricing.rs  units.rs
gateway-core/src/runtime/: claim.rs  enqueue.rs  locks.rs  mod.rs  policy.rs  scheduler.rs  sweeper.rs  worker.rs
gateway-core/src/storage/: arlocal.rs  attempt.rs  backend.rs  body.rs  bootstrap.rs  credit.rs  direct.rs  funding.rs  limits.rs  mod.rs  node.rs  persist.rs  reconcile.rs  refund.rs  session.rs  source.rs  staging.rs  topup.rs  turbo.rs
gateway-core/src/testsupport/: mod.rs
gateway-core/src/wallet/: config.rs  grant.rs  keyring.rs  keyring_edit.rs  mod.rs  operator.rs  pool.rs  quote.rs  replenish.rs  submitter.rs  utxo.rs
gateway-core/src/webhook/: delivery.rs  egress.rs  fanout.rs  mod.rs  owner.rs  projection.rs  registration.rs  secret.rs  signer.rs  worker.rs
gateway-core/tests/: api_info_pg.rs  api_plane_migration_pg.rs  api_routes_pg.rs  api_sse_pg.rs  carriage_vectors.rs  chain_attempt_pg.rs  chain_blocker_e2e.rs  chain_confirm_pg.rs  chain_gateway_parse.rs  chain_gateway_pg.rs  chain_koios_auth.rs  chain_label_fetch_failover.rs  chain_label_fetch_providers.rs  chain_live_e2e.rs  chain_records_pg.rs  chain_recover_pg.rs  chain_scan_live.rs  chain_scan_pg.rs  chain_submit_pg.rs  control_audit_atomicity_pg.rs  control_credential_lifecycle_pg.rs  control_openapi_route_coverage.rs  control_plane_pg.rs  control_storage_sources_pg.rs  control_storage_topup_pg.rs  control_tenancy_pg.rs  events_pg.rs  fx_rate_pg.rs  harness_smoke.rs  ledger_journal_pg.rs  ledger_quote_anchor_pg.rs  maintenance_pg.rs  migration_privilege.rs  openapi_route_coverage.rs  operator_wallets_pg.rs  protocol_params_live.rs  protocol_params_pg.rs  publish_lifecycle_e2e_pg.rs  quote_lifecycle_pg.rs  quote_storage_affordability_pg.rs  (+31 more)
gateway-core/tests/fixtures/: epoch_params_preprod.json  tip_preprod.json
gateway-core/tests/fixtures/chain/: blockfrost_blocks_latest.json  blockfrost_tx.json  blocks_by_height.json  label309_blockfrost_labels_page1.json  label309_blockfrost_tx_11.json  label309_blockfrost_tx_22.json  label309_blockfrost_tx_33.json  label309_koios_metadata.json  label309_koios_metalabel.json  label309_koios_metalabel_clean.json  tip.json  tip_string_height.json  tx_cbor.json  tx_info.json  tx_status.json
gateway/src/: admin.rs  assembly.rs  bootstrap.rs  config.rs  handlers.rs  keyring.rs  lib.rs  main.rs  observability.rs  pricing.rs  storage_bootstrap.rs
gateway/src/assets/: admin.html
gateway/tests/: admin_cli_e2e_pg.rs  bootstrap_pg.rs  keyring_cli.rs  pricing_pg.rs  startup_smoke.rs  storage_wiring_pg.rs
(+2 files in other folders)
